--- a/css/design.css
+++ b/css/design.css
@@ -16,17 +16,19 @@ body{
 #row-1 td{
   border-left: 5px solid black;
   border-bottom: 5px solid black;
-  padding: 20px;
-  background-color: red
+  background-color: red;
 }
 #row-2 td{
   border-left: 5px solid black;
   border-bottom: 5px solid black;
-  padding: 20px;
 }
 #row-3 td{
   border-left: 5px solid black;
   border-bottom: 5px solid black;
-  padding: 20px;
   background-color: blue;
+}
+
+td{
+  height: 100px;
+  width: 100px;
 }
