--- a/css/design.css
+++ b/css/design.css
@@ -5,24 +5,29 @@ body{
   background-position: center;
   background-size: cover;
 }
+
 #table{
   border-collapse: collapse;
   border: 5px solid black;
   margin: 200px auto;
   width: 30%;
   text-align: center;
+  font-size: 30px;
 }
 
 #row-1 td{
+  font-family: 'courier';
   border-left: 5px solid black;
   border-bottom: 5px solid black;
   background-color: red;
 }
 #row-2 td{
+  font-family: 'courier';
   border-left: 5px solid black;
   border-bottom: 5px solid black;
 }
 #row-3 td{
+  font-family: 'courier';
   border-left: 5px solid black;
   border-bottom: 5px solid black;
   background-color: blue;
